feat: Fix and update specialty controller
