# src/main/resources/openapi.yml
@@ -525,7 +525,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RestError'
         404:
-          description: Owner not found.
+          description: Pet Type not found.
           content:
             application/json:
               schema:
@@ -579,7 +579,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RestError'
         404:
-          description: Owner not found.
+          description: Pet Type not found.
           content:
             application/json:
               schema:
@@ -639,7 +639,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RestError'
         404:
-          description: Owner not found.
+          description: Pet Type not found.
           content:
             application/json:
               schema:
@@ -740,7 +740,7 @@ paths:
                 $ref: '#/components/schemas/RestError'
     post:
       tags:
-        - petw
+        - pet
       operationId: addPet
       summary: Create a pet
       description: Creates a pet .
@@ -945,6 +945,257 @@ paths:
                 $ref: '#/components/schemas/RestError'
         404:
           description: Owner not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+  /specialties:
+    get:
+      tags:
+        - specialty
+      operationId: listSpecialties
+      summary: Lists specialties
+      description: Returns an array of specialty .
+      responses:
+        200:
+          description: Specialties found and returned.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Specialty'
+        304:
+          description: Not modified.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+    post:
+      tags:
+        - specialty
+      operationId: addSpecialty
+      summary: Create a specialty
+      description: Creates a specialty .
+      requestBody:
+        description: The specialty
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Specialty'
+        required: true
+      responses:
+        200:
+          description: Specialty created successfully.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Specialty'
+        304:
+          description: Not modified.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        404:
+          description: Owner not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+  /specialties/{specialtyId}:
+    get:
+      tags:
+        - specialty
+      operationId: getSpecialty
+      summary: Get a specialty by ID
+      description: Returns the specialty or a 404 error.
+      parameters:
+        - name: specialtyId
+          in: path
+          description: The ID of the pet.
+          required: true
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            example: 1
+      responses:
+        200:
+          description: Specialty details found and returned.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Specialty'
+        304:
+          description: Not modified.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        404:
+          description: Specialty not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+    put:
+      tags:
+        - specialty
+      operationId: updateSpecialty
+      summary: Update a specialty by ID
+      description: Returns the specialty or a 404 error.
+      parameters:
+        - name: specialtyId
+          in: path
+          description: The ID of the specialty.
+          required: true
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            example: 1
+      requestBody:
+        description: The pet
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Specialty'
+        required: true
+      responses:
+        200:
+          description: Specialty details found and returned.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Specialty'
+        304:
+          description: Not modified.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        404:
+          description: Specialty not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+    delete:
+      tags:
+        - specialty
+      operationId: deleteSpecialty
+      summary: Delete a specialty by ID
+      description: Returns the specialty or a 404 error.
+      parameters:
+        - name: specialtyId
+          in: path
+          description: The ID of the specialty.
+          required: true
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            example: 1
+      responses:
+        200:
+          description: Specialty details found and returned.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Specialty'
+        304:
+          description: Not modified.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        404:
+          description: Specialty not found.
           content:
             application/json:
               schema:
